# aiogram-bot-template

./: .editorconfig  .env.dist  .gitignore  Makefile  README.md  pyproject.toml  telegram-bot.service
bot/: __init__.py  __main__.py  factories.py  runners.py  settings.py
bot/enums/: __init__.py  callback_query_type.py
bot/filters/: __init__.py  chat.py  magic_data.py
bot/handlers/common/: start.py
bot/handlers/extra/: errors.py  pm.py
bot/handlers/main/: start.py
bot/keyboards/: base.py
bot/middlewares/: __init__.py
bot/middlewares/outer/: __init__.py  database.py  i18n.py  intermediate.py  outer.py  user.py
bot/middlewares/request/: retry.py
compose/: .env.dist
lang/ru/: messages.ftl
lang/us/: messages.ftl
migrations/: env.py
migrations/versions/: 001_created_table.py
services/database/: create_pool.py
services/database/models/: user.py
services/database/repositories/: user.py
utils/: mediakit.py  notifier.py  timeflow.py
