[tool.poetry]
name = "aiogram-template"
version = "1.0.0"
license = "GNU General Public License"
description = "Telegram Bot Template"
authors = ["Xpos587"]
readme = "README.md"
repository = "https://github.com/Xpos587/aiogram-template"
packages = [
    { include = ".", from = "." },
]

[tool.poetry.dependencies]
python              = "^3.11"
aiogram             = "^3.3.0"
aiogram_i18n        = "^1.3.4"
aiohttp             = "^3.9.1"
alembic             = "^1.13.1"
asyncpg             = "^0.29.0"
redis               = "^5.0.1"
sqlalchemy          = "^2.0.25"
msgspec             = "^0.18.5"
pydantic            = "^2.5.3"
pydantic_settings   = "^2.1.0"
fluent_runtime      = "^0.4.0"
types-pyyaml        = "^6.0.12.12"
tzdata              = "^2024.1"

[tool.poetry.group.dev.dependencies]
libcst              = "^1.1.0"
black               = "^23.12.1"
mypy                = "^1.8.0"
ruff                = "^0.1.14"

[tool.black]
line_length = 80
exclude = "\\.?venv|\\.?tests"

[tool.ruff]
target-version = "py38"
line-length = 80
ignore = ["N817"]
select = [
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "Q",
    "S",
    "T",
    "W",
    "YTT",
    "RET",
    "SIM",
    "ASYNC",
]
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "scripts",
]

[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy"
]
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "scripts",
]

[[tool.mypy.overrides]]
module = ["redis.*"]
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["bot.handlers.*"]
strict_optional = false
warn_return_any = false
